--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,11 @@
 .honda-text-primary {
   color: #e76f51;
 }
+.honda-client-img {
+  height: 149px;
+  width: 149px;
+}
+.honda-award-img {
+  height: 300px;
+  width: 180px;
+}
