--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 .honda-bg-primary {
   background-color: #264653;
 }
-.honda-text-color {
+.honda-p-color {
   color: #e0e0e0;
 }
-.btn-honda-primary {
+.honda-btn-primary {
   background-color: #e76f51;
 }
 .honda-text-primary {
